# vapoursynth-resize2

./: .gitignore  ReadMe.md  flake.nix  meson.build  meson_options.txt  pyproject.toml  resize.cpp
.github/workflows/: build.yml  pypipublish.yml  windows.yml
subprojects/: zimg.wrap
subprojects/packagefiles/zimg/: 0001.patch  0002-blur.patch  meson.build
